# rover_2021

./: README.md
greenbox/: CMakeLists.txt  package.xml
greenbox/launch/: centre_launch.launch
greenbox/src/: coordi.cpp  rover_coordi.cpp
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/launch/: default.launch  main.launch
obstacle_avoidance/src/: avoidance_node.cpp  reachdest.cpp  velocitycontrol.cpp
obstacle_avoidance/urdf/: rover_description.urdf
rover_controller/: CMakeLists.txt  package.xml
rover_controller/config/: params.yaml
rover_controller/launch/: default.launch  spawn_rover.launch  velcontrol.launch
rover_controller/src/: gps_node.cpp  newreach.cpp  reachdest.cpp  velocitycontrol.cpp
rover_sim/launch/: default.launch
rover_sim/src/: reachdest.cpp
rover_sim/urdf/: rover_description.urdf
