<?xml version="1.0"?>
<package format="2">
    <name>obstacle_avoidance</name>
    <version>0.0.1</version>
    <description>Simulator for the Rover project.</description>
    <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
</package>
